[package]
name = "{{project-name}}"
version = "0.0.0"
authors = ["{{authors}}"]
edition = "2021"
description = "{{project-description}}"
readme = "README.md"
repository = "https://github.com/{{gh-username}}/{{project-name}}"
license = "MIT OR Apache-2.0"
keywords = [""]
categories = [""]

[dependencies]

[lints.rust]
future_incompatible = "warn"
unused = "warn"
let_underscore_drop = "deny"
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_abi = "deny"
missing_debug_implementations = "deny"
missing_docs = "deny"
non_ascii_idents = "deny"
nonstandard_style = "deny"
noop_method_call = "deny"
rust_2018_idioms = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unreachable_pub = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"
unused_results = "deny"
unused_tuple_struct_fields = "deny"

[lints.clippy]
pedantic = "warn"
module_name_repetitions = "allow"
