[package]
name = "{{project-name}}"
version = "0.0.0"
authors = ["{{authors}}"]
edition = "2024"
rust-version = "1.56"
description = "{{project-description}}"
documentation = "https://docs.rs/{{project-name}}"
readme = "README.md"
repository = "https://github.com/{{gh-username}}/{{project-name}}"
license = "MIT OR Apache-2.0"
keywords = [""]
categories = [""]

[dependencies]

[lints.rust]
async_fn_in_trait = "allow"
ffi_unwind_calls = "warn"
let_underscore_drop = "deny"
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_abi = "deny"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "forbid"
non_local_definitions = "warn"
nonstandard_style = { level = "deny", priority = 1 }
redundant_lifetimes = "deny"
rust_2018_idioms = { level = "deny", priority = 1 }
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unit_bindings = "deny"
unreachable_pub = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"

[lints.clippy]
doc_markdown = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
should_panic_without_expect = { level = "allow", priority = 1 }
pedantic = "warn"
